// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insightViewCodeGenerator tests > should generate code for insight 1`] = `
"import React from \\"react\\";
import { IChartConfig } from \\"@gooddata/sdk-ui-charts\\";
import { InsightView } from \\"@gooddata/sdk-ui-ext\\";

const insight = \\"AreaChart.0229f24b92f336871eeb04e1e16c4e68\\";
const showTitle = \\"AreaChart - 440x154 - Force position TOP, max 1 row, Gradient legend normal - legend on top\\";
const config: IChartConfig = {
    legend: {
        position: \\"top\\",
        responsive: \\"autoPositionWithPopup\\"
    }
};
const style = {height: 400};

export function MyComponent() {
    return (
        <div style={style}>
            <InsightView
                insight={insight}
                showTitle={showTitle}
                config={config}
            />
        </div>
    );
}
"
`;

exports[`insightViewCodeGenerator tests > should generate code for insight geo chart and define config with mapbox Token placeholder 1`] = `
"import React from \\"react\\";
import { IGeoConfig } from \\"@gooddata/sdk-ui-geo\\";
import { InsightView } from \\"@gooddata/sdk-ui-ext\\";

const insight = \\"id\\";
const showTitle = \\"Name\\";
const config: IGeoConfig = {mapboxToken: \\"<fill your Mapbox token here>\\"};
const style = {height: 400};

export function MyComponent() {
    return (
        <div style={style}>
            <InsightView
                insight={insight}
                showTitle={showTitle}
                config={config}
            />
        </div>
    );
}
"
`;

exports[`insightViewCodeGenerator tests > should generate code for insight with non default locale 1`] = `
"import React from \\"react\\";
import { IChartConfig } from \\"@gooddata/sdk-ui-charts\\";
import { InsightView } from \\"@gooddata/sdk-ui-ext\\";

const insight = \\"AreaChart.0229f24b92f336871eeb04e1e16c4e68\\";
const showTitle = \\"AreaChart - 440x154 - Force position TOP, max 1 row, Gradient legend normal - legend on top\\";
const config: IChartConfig = {
    legend: {
        position: \\"top\\",
        responsive: \\"autoPositionWithPopup\\"
    }
};
const locale = \\"de-DE\\";
const style = {height: 400};

export function MyComponent() {
    return (
        <div style={style}>
            <InsightView
                insight={insight}
                showTitle={showTitle}
                config={config}
                locale={locale}
            />
        </div>
    );
}
"
`;
